--- a/crates/ir/Cargo.toml
+++ b/crates/ir/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.12.0"
-strum = { version = "0.25", features = ["derive"] }
+strum = { version = "0.26.1", features = ["derive"] }
+smallvec = "1.13.1"
