--- a/crates/ir/Cargo.toml
+++ b/crates/ir/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 itertools = "0.12.0"
 strum = { version = "0.26.1", features = ["derive"] }
 smallvec = "1.13.1"
+petgraph = "0.6.4"
